# IC-Projeto-3

./: BitSet.h  BitStream.h  CMakeLists.txt  DCTIntraEncoding.h  FrameQuantization.h  GolombCoder.h  IntraEncoding.h  MotionCompensation.h  README.md  YUV4MPEG2.h  video_cmp.cpp  video_codec.cpp  video_codec_dct.cpp  video_intra.cpp
.github/workflows/: build-linux.yml
